Fix layout issue #chrome.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1720,3 +1720,6 @@ body.candidates#index
 body.candidates#show
   section.header
     +clearfix
+body.answers#new
+  section.header
+    clear: both
